fixed scroll issue by change overflow-x to overflow

--- a/css/header-footer-style.css
+++ b/css/header-footer-style.css
@@ -8,6 +8,7 @@
 body {
   width: 100vw;
   height: 100vh;
+  background-color: rgb(202, 193, 193);
 }
 
 /* HEADER ***************/
